mentors tips checkt

--- a/index.html
+++ b/index.html
@@ -14,25 +14,39 @@
     <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <a href="#" class="web">Web<span class="studio1">Studio</span></a>
-            </div>                      
-                <ul class="menu">
-                         <nav class="nav">
-                        <li class="active"><a href="#studio" >Студия</a></li>
-                        <li class="link"><a href="./portfolio.html">Портфолио</a></li>
-                        <li class="link"><a href="#contacts">Контакты</a></li>                  
-                         </nav>    
+            <nav class="nav">
+                <div class="logo">
+                    <a href="#" class="web">Web<span class="studio1">Studio</span></a>
+                </div> 
 
-                    <ul class="contacts">  
-                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                    </ul>                                 
-                </ul>           
+                <ul class="menu">
+                    <li class="active">
+                        <a href="#studio" >Студия</a>
+                    </li>
+
+                    <li class="link">
+                        <a href="./portfolio.html">Портфолио</a>
+                    </li>
+
+                    <li class="link">
+                        <a href="#contacts">Контакты</a>
+                    </li>
+                </ul>                               
+            </nav> 
+
+            <ul class="contacts">  
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>                                                                             
         </div>     
     </header>
     <main>
-        <section  id="studio" class="hero">
+        <section  id="studio" class="section hero">
             <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -42,7 +56,7 @@
                 </div>                        
             </div>
         </section>
-        <section class="features">           
+        <section class="section features">           
             <div class="container">
                 <h2 class="features-title">Наши навыки</h2>
                 <ul>
@@ -73,7 +87,7 @@
                 </ul>
             </div>
         </section>
-        <section class="studio">
+        <section class="section studio">
             <div class="container">
                 <h2 class="studio-title">Чем мы занимаемся</h2>
                 <ul>
@@ -89,7 +103,7 @@
                 </ul>
             </div>
         </section>
-        <section class="team">
+        <section class="section team">
             <div class="container">
             <h2 class="team-title">Наша команда</h2>
                 <ul>
@@ -125,8 +139,8 @@
                         </div>
                     </li>
 
-                    <li>
-                        <div class="member">
+                    <li class="member">
+                        <div>
                             <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270">
                         </div>
                         <div>    
